[package]
name = "spectre-bridge-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spectre_bridge_service_lib"
path = "src/lib.rs"

[[bin]]
name = "spectre-bridge-service"
path = "src/main.rs"

[dependencies]
web3 = "0.18.0"
borsh = "0.9.3"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = "1.23.0"
uint = { version = "0.8.3", default-features = false }
config = "0.13.1"
url = "2.2.2"
http-client = "6.5.1"
http-types = "2.12.0"
near_client = { path = "near_client" }
eth_client = { path = "eth_client" }
redis = { version = "0.21.5", features = ["tokio-comp"] }
assert-json-diff = "2.0.1"
reqwest = "0.11.10"
futures-util = { version = "0.3.15" }
secp256k1 = "0.21.0"
rlp = "0.5.1"
bytes = "1.1.0"
clap = {version = "3.1.18", features = [ "derive" ] }
thiserror = "1.0.31"
near-lake-framework = "0.6.0"
near-sdk = "4.1.1"
near-jsonrpc-client = "0.4.1"
near-primitives = "0.15.0"
near-jsonrpc-primitives = "0.15.0"
near-crypto = "0.15.0"
spectre-bridge-common = { git = "ssh://git@github.com/aurora-is-near/spectre-bridge-common.git", tag = "0.1.0" }
hex = { version = "0.4", features = ["serde"] }
near-workspaces = "0.7.0"
rug = "1.19"

[dev-dependencies]
uuid = "*"
hex = "0.4.3"
rand = "*"
shellexpand = "3.0.0"