[package]
name = "fast-bridge-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fast_bridge_service_lib"
path = "src/lib.rs"

[[bin]]
name = "fast-bridge-service"
path = "src/main.rs"

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev = "c593b722d57da0c2885123867a7d4662a288d6cc" }
borsh = "0.9.3"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = "1.23.0"
uint = { version = "0.8.3", default-features = false }
config = "0.13.1"
url = "2.2.2"
http-client = "6.5.1"
http-types = "2.12.0"
near_client = { path = "near_client" }
eth_client = { path = "eth_client" }
redis = { version = "0.22.3", features = ["tokio-comp"] }
assert-json-diff = "2.0.1"
reqwest = "0.11.10"
futures-util = { version = "0.3.15" }
secp256k1 = "0.21.0"
rlp = "0.5.1"
bytes = "1.1.0"
clap = {version = "3.1.18", features = [ "derive" ] }
thiserror = "1.0.31"
near-lake-framework = "0.6.0"
near-sdk = "4.1.1"
near-jsonrpc-client = "0.4.1"
near-primitives = "0.15.0"
near-jsonrpc-primitives = "0.15.0"
near-crypto = "0.15.0"
fast-bridge-common = { git = "https://github.com/aurora-is-near/fast-bridge-common.git", tag = "0.1.2" }
hex = { version = "0.4", features = ["serde"] }
near-workspaces = "0.7.0"
tracing = "0.1.37"
tracing-subscriber = { version="0.3.15", features = ["env-filter"] }
rug = "1.19"
dotenv = "0.15.0"

[dev-dependencies]
uuid = "*"
hex = "0.4.3"
rand = "*"
shellexpand = "3.0.0"