[package]
name = "eth_client"
version = "0.18.0"
authors = ["Blaize Tech"]
edition = "2018"
description = "Ethereum JSON-RPC client"
keywords = ["jsonrpc", "web3", "ethereum", "rpc", "client"]

[dependencies]
web3 = { version = "0.18.0", features = ["signing"] }
coingecko = "1.0.0"
reqwest = "0.11.10"
serde_json = "1.0.79"
tokio = "1.17.0"
secp256k1 = { version = "0.21", features = ["recovery"], optional = true }
once_cell = { version = "1.8.0", optional = true }

[features]
default = ["signing"]
signing = ["secp256k1", "once_cell"]
