[package]
name = "eth_client"
version = "0.18.0"
authors = ["Blaize Tech"]
edition = "2021"
description = "Ethereum JSON-RPC client"
keywords = ["jsonrpc", "web3", "ethereum", "rpc", "client"]

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", commit = "c593b722d57da0c2885123867a7d4662a288d6cc", features = ["signing"] }
coingecko = "1.0.0"
reqwest = "0.11.10"
serde_json = "1.0.79"
serde = "1.0.137"
tokio = "1.23.0"
secp256k1 = { version = "0.21", features = ["recovery"], optional = true }
once_cell = { version = "1.16.0", optional = true }
hex = "0.4.3"
url = "2.2.2"

[features]
default = ["signing"]
signing = ["secp256k1", "once_cell"]
