[package]
name = "near_client"
version = "0.0.0" # managed by cargo-workspaces, see below
authors = ["Blaize Tech"]
edition = "2021"
description = "Lower-level API for interfacing with the NEAR Protocol via JSONRPC"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["near", "api", "jsonrpc", "rpc", "async"]
rust-version = "1.56.0"

# cargo-workspaces
[workspace.metadata.workspaces]
version = "0.3.0"

[dependencies]
thiserror = "1.0.28"

reqwest = { version = "0.11.4", features = ["json"] }
url = "2.2.2"
lazy_static = "1.4.0"

uuid = { version = "0.8", features = ["v4"] }
borsh = "0.9"
serde = "1.0.127"
serde_json = "1.0.66"

near-sdk = "4.0.0-pre.7"
near-primitives = "0.12.0"
near-chain-configs = "0.12.0"
near-jsonrpc-primitives = "0.12.0"
near-jsonrpc-client = "0.3.0"

near-crypto = "0.12.0"
tokio = { version = "1.1", features = ["rt", "macros"] }

[features]
any = []
sandbox = []
adversarial = []
